--- a/analysis/ModelAnalysis.ipynb
+++ b/analysis/ModelAnalysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
     "    return win_punct, lost_punct\n",
     "\n",
     "\n",
-    "def inform_win_lost_index(df, df_calculate):\n",
+    "def inform_win_lost_index(df, df_calculate, depth=20):\n",
     "    \"\"\"\n",
     "    Adds win and loss punctuation to the DataFrame for each row's season.\n",
     "\n",
@@ -280,7 +280,7 @@
     "    :return: DataFrame with the win and loss punctuation for each row's season.\n",
     "    \"\"\"\n",
     "    max_season = df_calculate[\"season\"].max()\n",
-    "    df_recent = df[df[\"season\"] >= (max_season - 20)].copy()\n",
+    "    df_recent = df[df[\"season\"] >= (max_season - depth)].copy()\n",
     "\n",
     "    teams = df_calculate[[\"home_team\", \"away_team\"]].drop_duplicates()\n",
     "    df_conf_dict = {\n",
@@ -481,20 +481,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for -: 'str' and 'int'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_17356\\970486178.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     40\u001b[0m \u001b[1;31m# example of usage last_season_position\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     41\u001b[0m \u001b[0mdf_calculate\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 42\u001b[1;33m \u001b[0mdf_calculate\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlast_season_position\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdf_calculate\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     43\u001b[0m \u001b[0mdisplay\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf_calculate\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_17356\\970486178.py\u001b[0m in \u001b[0;36mlast_season_position\u001b[1;34m(df, df_predict)\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[1;33m:\u001b[0m\u001b[1;32mreturn\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mDataFrame\u001b[0m \u001b[1;32mwith\u001b[0m \u001b[0madded\u001b[0m \u001b[0mlast\u001b[0m \u001b[0mseason\u001b[0m \u001b[0mpoints\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m     \"\"\"\n\u001b[1;32m---> 10\u001b[1;33m     \u001b[0mdf_calculate\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"season\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mdf_predict\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"season\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m-\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m     \u001b[0mdf_results\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcalculate_team_results\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf_calculate\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'str' and 'int'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def last_season_position(df, df_predict):\n",
     "    \"\"\"\n",
@@ -535,15 +522,14 @@
     "    ].replace(0, df_results[\"points\"].mean() - 20)\n",
     "    return df_predict\n",
     "\n",
-    "# example of usage last_season_position\n",
-    "train_season = 2015\n",
-    "depth = 20  # Number of seasons to consider for training\n",
-    "\n",
-    "df_test = df.loc[\n",
-    "    (df[\"season\"] > (train_season - depth)) & (df[\"season\"] <= train_season)\n",
-    "].copy()\n",
-    "df_test = last_season_position(df, df_test)\n",
-    "display(df_test)\n"
+    "# # example of usage last_season_position\n",
+    "# train_season = 2015\n",
+    "# depth = 20  # Number of seasons to consider for training\n",
+    "# df_test = df.loc[\n",
+    "#     (df[\"season\"] > (train_season - depth)) & (df[\"season\"] <= train_season)\n",
+    "# ].copy()\n",
+    "# df_test = last_season_position(df, df_test)\n",
+    "# display(df_test)\n"
    ]
   },
   {
@@ -811,12 +797,12 @@
     "df_predict_quiniela = df_predict[\n",
     "    [\"season\", \"matchday\", \"home_team\", \"away_team\", \"result\", \"prediction\", \"correct\"]\n",
     "].copy()\n",
-    "df_predict_quiniela[\"result\"] = df_predict_quiniela[\"result\"].map(\n",
-    "    {1: \"1\", 0: \"X\", -1: \"2\"}\n",
-    ")\n",
-    "df_predict_quiniela[\"prediction\"] = df_predict_quiniela[\"prediction\"].map(\n",
-    "    {1: \"1\", 0: \"X\", -1: \"2\"}\n",
-    ")\n",
+    "def quiniela_format(df):\n",
+    "    df[\"result\"] = df[\"result\"].map({1: \"1\", 0: \"X\", -1: \"2\"})\n",
+    "    df[\"prediction\"] = df[\"prediction\"].map({1: \"1\", 0: \"X\", -1: \"2\"})\n",
+    "    return df\n",
+    "\n",
+    "df_predict_quiniela = quiniela_format(df_predict_quiniela)\n",
     "df_predict_quiniela"
    ]
   }
