--- a/analysis/ModelAnalysis.ipynb
+++ b/analysis/ModelAnalysis.ipynb
@@ -1077,7 +1077,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If we now want to use it to properly predict one matchday and see the precision of a single matchday we can do the following"
+    "If we now want to use it to properly predict one matchday and see the precision of a single matchday we can do the following. However, a software functionality has been developed and can be accessed using cli.py"
    ]
   },
   {
