--- a/analysis/LaLigaDataAnalysis.ipynb
+++ b/analysis/LaLigaDataAnalysis.ipynb
@@ -1212,7 +1212,7 @@
     "\n",
     "top_5_elev_teams = elevators_by_team.head(5).index.tolist()\n",
     "\n",
-    "plot_ranking_evolution(df, *top_5_elev_teams).show()"
+    "plot_ranking_evolution(df_results, *top_5_elev_teams).show()"
    ]
   },
   {
@@ -1348,7 +1348,14 @@
     "    last_5_results = (\n",
     "        df_team_season.sort_values(\"date\", ascending=False)[\"Result\"].head(5).tolist()\n",
     "    )\n",
-    "    return f\"{last_5_results}\""
+    "    return f\"{last_5_results}\"\n",
+    "\n",
+    "df_results_extended = df_results_matchday.copy()\n",
+    "df_results_extended[\"last5\"] = df_results_extended.apply( #This will take a lot of time!\n",
+    "    lambda row: get_last_5_results(df, row[\"team\"], row[\"season\"]), axis=1\n",
+    ")\n",
+    "df_results_extended.to_excel(\"../reports/MatchdayStandings.xlsx\", index=False)\n",
+    "df_results_extended"
    ]
   },
   {
